Fix node warning
